2006-02-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* config.hh.in: remove @FRAMEWORKDIR@

	* lily/system-start-text.cc (get_stencil): new file: separate out
	system-start-delimiter text support.

	* input/**ly: replace \context with \new where appropriate.
	
	* THANKS: add Don.

	* lily/slur-scoring.cc (get_base_attachments): use
	robust_relative_extent. This fixes problems with empty paper-columns. 

2006-02-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely (Top): document \new syntax.

	* scm/define-music-properties.scm (all-music-properties):
	create-new property.

	* lily/context-specced-music-iterator.cc (construct_children):
	inspect 'create-new property iso. magical $uniqueContextId context
	id.

	* lily/parser.yy (optional_id): allow \new "Bar" = "foo" too.

	* lily/context-key-manager.cc (Module): new file. Encapsulate
	object key generation.

	* lily/include/context-key-manager.hh (Module): new file.

2006-02-11  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/define-grobs.scm (all-grob-descriptions): center instrument
	names vertically

	* configure.in (LINK_GXX_STATICALLY): strip -DSTRING_UTILS_INLINED
	options.
	(reloc_b): excise --enable-framework-dir

	* lily/relocate.cc (framework_relocation): use getenv
	LILYPOND_GS_VERSION or -DGHOSTSCRIPT_VERSION to set GS version.

2006-02-11  Jan Nieuwenhuizen  <janneke@gnu.org>

	* flower/include/std-string.hh: 
	* flower/include/std-vector.hh: Finish std:: conversion; move
	flower extensions from std:: namespace.  Update users.

	* lily/include/lily-proto.hh: Replace Link_array__*_ macros by
	their expansion to vector<*>.  Update users.

2006-02-10  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/invoking.itely: add example to File structure.

	* Documentation/user/ instrument-notation.itely, cheatsheet.itely,
	examples.itely, putting.itely: {\new|\context} Lyrics \lyricsto.

2006-02-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ly/paper-defaults.ly: typo.
