@@ -1,3 +1,7 @@
+2006-02-13  Heikki Junes  <hjunes@cc.hut.fi>
+
+	* Documentation/index.html.in: specify sizes for all big HTML pages.
+
 2006-02-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* config.hh.in: remove @FRAMEWORKDIR@
